<resources>
    <string name="app_name">LokalAndroid</string>
    <string name="display_name">Display Name</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="registerNow">Register Now!</string>
    <string name="unattainable">"Address is unattainable!"</string>
    <string name="full_address">%1$s</string>
    <string name="numAttendees">%1$s</string>
    <string name="join">join</string>
    <string name="leave">leave</string>
</resources>
