<?xml version="1.0" encoding="UTF-8"?>
<android.support.constraint.ConstraintLayout
    tools:context="com.example.aadam.lokalandroid.activities.RegisterActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.constraint.Guideline
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".05"
        android:id="@+id/left_guideline"/>
    <android.support.constraint.Guideline
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".95"
        android:id="@+id/right_guideline"/>
    <android.support.constraint.Guideline
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".40"
        android:id="@+id/top_guideline"/>
    <android.support.constraint.Guideline
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".80"
        android:id="@+id/bottom_guideline"/>
    <android.support.constraint.Guideline
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".45"
        android:id="@+id/register_bottom_guideline"/>
    <android.support.constraint.Guideline
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".70"
        android:id="@+id/text_input_bottom_guideline"/>

    <ImageView
        android:layout_width="202dp"
        android:layout_height="97dp"
        android:src="@drawable/banner_logo"
        app:layout_constraintBottom_toBottomOf="@+id/top_guideline"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintRight_toRightOf="@+id/right_guideline" />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/register_bottom_guideline"
        app:layout_constraintRight_toRightOf="@+id/right_guideline"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        android:text="@string/register"
        app:layout_constraintTop_toTopOf="@+id/top_guideline"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="25sp"/>
    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:background="@drawable/button"
        app:layout_constraintBottom_toBottomOf="@id/text_input_bottom_guideline"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="@id/register_bottom_guideline">
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@color/colorTransparent"
            android:id="@+id/displayNameEntry"
            android:textColor="#252424"
            android:hint="@string/display_name"
            android:textColorHint="#414141"
            android:layout_margin="10dp"/>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:background="@drawable/thin_line"
            android:orientation="horizontal"
            android:id="@+id/thinLineOne"
            android:layout_below="@id/displayNameEntry"/>
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@color/colorTransparent"
            android:id="@+id/emailEntry"
            android:textColor="#252424"
            android:hint="@string/email"
            android:textColorHint="#414141"
            android:layout_margin="10dp"
            android:layout_below="@id/thinLineOne"
            android:inputType="textEmailAddress"/>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:background="@drawable/thin_line"
            android:orientation="horizontal"
            android:id="@+id/thinLineTwo"
            android:layout_below="@id/emailEntry"/>
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@color/colorTransparent"
            android:id="@+id/passwordEntry"
            android:textColor="#252424"
            android:hint="@string/password"
            android:textColorHint="#414141"
            android:layout_margin="10dp"
            android:layout_below="@id/thinLineTwo"
            android:inputType="textPassword"/>
    </RelativeLayout>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/registerButton"
        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        android:text="@string/registerNow"
        app:layout_constraintTop_toTopOf="@id/text_input_bottom_guideline"
        android:textColor="@color/colorWhite"
        android:layout_margin="10dp"
        android:padding="10dp"/>
</android.support.constraint.ConstraintLayout>
